<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navGraph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.androidfinalproject.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_loginFragment_to_signInFragment"
            app:destination="@id/signInFragment" />

        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.androidfinalproject.ui.signin.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.androidfinalproject.ui.signup.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">

        <action
            android:id="@+id/action_signUpFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.androidfinalproject.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />

        <action
            android:id="@+id/action_homeFragment_to_addReviewFragment"
            app:destination="@id/addReviewFragment" />

        <action
            android:id="@+id/action_homeFragment_to_reviewDetailsFragment"
            app:destination="@id/reviewDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.androidfinalproject.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_profileFragment_to_homeFragment"
            app:destination="@id/homeFragment" />

        <action
            android:id="@+id/action_profileFragment_to_reviewDetailsFragment"
            app:destination="@id/reviewDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addReviewFragment"
        android:name="com.example.androidfinalproject.ui.addreview.AddReviewFragment"
        android:label="@string/add_review"
        tools:layout="@layout/fragment_add_review">

        <action
            android:id="@+id/action_addReviewFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/reviewDetailsFragment"
        android:name="com.example.androidfinalproject.ui.reviewdetails.ReviewDetailsFragment"
        android:label="@string/review_details"
        tools:layout="@layout/fragment_review_details">

        <argument
            android:name="reviewId"
            app:argType="string" />

        <action
            android:id="@+id/action_reviewDetailsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>

</navigation>
